# ChimixCheatEngine

./: .gitignore  CMakeLists.txt  README.md  automate_release.ps1  build.ps1  build.sh  ci_build_cpp_engine.ps1  cleanup.ps1
.github/workflows/: build.yml  release.yml
desktop-app/: .gitignore  build-installer.bat  build.bat  cpp-server-mode-template.cpp  launch.bat  main.js  package-lock.json  package.json  preload.js  test_engine_servermode.py
desktop-app/cpp-src/: CMakeCache.txt  CMakeLists.txt  Makefile  MemoryScanner.cpp  MemoryScanner.h  ProcessManager.cpp  ProcessManager.h  Utils.cpp  Utils.h  cmake_install.cmake  main.cpp
desktop-app/include/: Common.h
desktop-app/include/nlohmann/: json.hpp
desktop-app/scripts/: check-engine.js
desktop-app/src/: app.js  index.html  styles.css
